<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".HomeActivity"
    android:scaleType = "centerCrop"
    android:background="@drawable/background5_20">

    <!-- Login progress -->

    <ProgressBar android:id="@+id/home_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <TextView android:id="@+id/textView_title"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/home_title_bar" android:textSize="40sp"
        android:textColor="#005685"
        android:shadowColor="#fbeee4"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="1.5"
        />

    <LinearLayout
        android:layout_width="20px"
        android:layout_height="20px"/>

    <ScrollView android:id="@+id/home_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout android:id="@+id/home_form_layout" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:background="#90FFFFFF"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="10px"/>

            <TextView android:id="@+id/textView_user_label" style="@style/SignupFont"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/home_user_label" android:textSize="17sp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="40px"
                    android:layout_height="wrap_content"/>
                <TextView android:id="@+id/textView_user" style="@style/SignupFont"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/home_user" android:textSize="22sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="20px"/>

            <TextView android:id="@+id/textView_logged_in_with_label" style="@style/SignupFont"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/home_logged_in_with_label"
                android:textSize="17sp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="40px"
                    android:layout_height="wrap_content"/>
                <TextView android:id="@+id/textView_last_logged_in_with" style="@style/SignupFont"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/home_logged_in_with_data" android:textSize="22sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="20px"/>

            <TextView android:id="@+id/textView_last_logged_in_label" style="@style/SignupFont"
                      android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_gravity="left"
                      android:text="@string/home_last_logged_in_label" android:textSize="17sp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="40px"
                    android:layout_height="wrap_content"/>
                <TextView android:id="@+id/textView_last_logged_in_date" style="@style/SignupFont"
                          android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:layout_gravity="left"
                          android:text="@string/home_last_logged_in_date" android:textSize="22sp"
                    />
            </LinearLayout>

        </LinearLayout>

            <Button android:id="@+id/transactions_button"
                android:background="@drawable/standard_button"
                style="@style/ButtonFont"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_transactions"
                android:focusable="true"
                />

            <Button android:id="@+id/authenticators_button"
                android:background="@drawable/standard_button"
                style="@style/ButtonFont"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_manage_authenticators"
                android:focusable="true"
               />

            <Button android:id="@+id/delete_account_button"
                android:background="@drawable/standard_button"
                style="@style/ButtonFont"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_delete_account"
                android:focusable="true"
                />

            <Button android:id="@+id/logout_button"
                android:background="@drawable/standard_button"
                style="@style/ButtonFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_logout"
                android:focusable="true"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>

