<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent" android:gravity="center_horizontal"
              android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin" tools:context=".TransactionActivity"
              android:scaleType = "centerCrop"
              android:background="@drawable/background1_20">

    <ProgressBar android:id="@+id/transaction_progress" style="?android:attr/progressBarStyleLarge"
                 android:layout_width="wrap_content" android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp" android:visibility="gone" />

    <TextView
        android:textColor="#005685"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Transactions"
        android:textSize="50sp"
        android:shadowColor="#fbeee4"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="1.5"
        android:id="@+id/textView" />

    <ScrollView android:id="@+id/transaction_view" android:layout_width="match_parent"
                android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#90FFFFFF"
                android:focusable="true" android:focusableInTouchMode="true">

                <CheckBox android:id="@+id/step_up_auth_check_box" style="?android:textAppearanceMedium"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="20dp" android:text="@string/prompt_step_up_auth"
                    android:checked="false"/>

                <CheckBox android:id="@+id/transaction_confirmation_check_box" style="?android:textAppearanceMedium"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="20dp" android:text="@string/prompt_transaction_confirmation"
                    android:checked="false"/>

                <LinearLayout
                    android:id="@+id/transaction_details"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/transactionType"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" android:orientation="horizontal">

                        <RadioButton
                            android:layout_marginTop="10dip"
                            android:layout_marginLeft="10dip"
                            android:layout_marginRight="10dip"
                            android:layout_weight="0.5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_transaction"
                            android:id="@+id/textTransactionRadioButton"
                            android:checked="false"/>
                        <RadioButton
                            android:layout_marginTop="10dip"
                            android:layout_marginLeft="10dip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/image_transaction"
                            android:id="@+id/imageTransactionRadioButton" />
                    </RadioGroup>


                    <EditText android:id="@+id/transaction_text_field"
                        android:layout_marginLeft="20dip"
                        android:layout_marginRight="20dip"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" android:hint="@string/text_for_transaction"
                        android:imeOptions="actionDone" android:inputType="text"
                        android:maxLines="1" android:singleLine="true" />

                </LinearLayout>

        </LinearLayout>

            <Button android:id="@+id/authenticate_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" android:text="@string/action_authenticate"
                    android:focusable="true"
                    android:background="@drawable/standard_button"
                    style="@style/ButtonFont"
                />


        </LinearLayout>

    </ScrollView>

</LinearLayout>