<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    android:scaleType = "centerCrop"
    android:background="@drawable/background6_20">

    <TextView
        android:textColor="#005685"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/intro_title"
        android:textSize="50sp"
        android:shadowColor="#fbeee4"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="1.5"
        android:id="@+id/intro_title" />

    <ProgressBar android:id="@+id/intro_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/intro_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/intro_form_layout" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:layout_gravity="center"
            >


            <Button android:id="@+id/login_password_button"
                android:background="@drawable/standard_button"
                style="@style/ButtonFont"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_login_with_password"
                android:focusable="true"
                />

            <Button android:id="@+id/login_fido_button"
                android:background="@drawable/standard_button"
                style="@style/ButtonFont"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_login_with_fido"
                android:focusable="true"
                />

            <Button android:id="@+id/new_account_button"
                android:background="@drawable/standard_button"
                style="@style/ButtonFont"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_new_account"
                android:focusable="true"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>

