<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".HomeActivity"
    android:scaleType = "centerCrop"
    android:background="@drawable/background4_20">

    <ProgressBar android:id="@+id/authenticators_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <TextView android:id="@+id/textView_title"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/authenticators_title_bar" android:textSize="32sp"
        android:textColor="#005685"
        android:shadowColor="#fbeee4"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="1.5"
        />

    <LinearLayout
        android:layout_width="20px"
        android:layout_height="20px"/>

    <RelativeLayout
        android:id="@+id/fido_authenticators_form"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:layout_above="@+id/footerlayout"
            android:id="@+id/listviewlayout">

                <ListView
                    android:id="@+id/list_view_authenticators"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:dividerHeight="0.1dp"
                    android:divider="#0000CC"
                    android:layout_weight="1"
                    android:choiceMode="singleChoice"
                    android:background="#90FFFFFF"
                    >
                </ListView>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/footerlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentBottom="true"
                >

            <Button android:id="@+id/deregister_button"
                android:background="@drawable/standard_button"
                style="@style/ButtonFont"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/action_deregister"
                android:focusable="true"
                android:enabled="false"
                />


            <Button android:id="@+id/register_new_authenticator_button"
                android:background="@drawable/standard_button"
                style="@style/ButtonFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/register_new_authenticator"
                android:focusable="true"
                />
            </LinearLayout>
    </RelativeLayout>

</LinearLayout>

